--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -7,14 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
     <link href="{% static 'usuarios/css/cadastro.css' %}" rel="stylesheet">
-    <link rel="shortcut icon" type="imagex/png" href="{% static 'usuarios/img/logo_ico.ico' %}">
+    <link rel="shortcut icon" type="imagex/png" href="{% static 'usuarios/img/icon.ico' %}">
 </head>
 
 <body>
     <div class="container">
         <div class="logo">
-            <img src="{% static 'usuarios/img/Logo_fatepi.png' %}" alt="Logo">
+            <img src="{% static 'usuarios/img/Logo_FF.png' %}" alt="Logo">
         </div>
+        <div class="titulo"><h1>Faça seu cadastro</h1></div>
+    `</br>
         <form action="#" method="POST"> {% csrf_token %}
             <label for="nome">Nome:</label>
             <input type="text" id="nome" name="nome" required>
@@ -22,8 +24,8 @@
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
 
-            <label for="matricula">Matrícula:</label>
-            <input type="text" id="matricula" name="matricula" required>
+            <label for="Username">Nome de usuário:</label>
+            <input type="text" id="nome_de_usuario" name="nome_de_usuario" required>
 
             <label for="curso">Curso:</label>
             <select id="curso" name="curso" required>
