--- a/usuarios/templates/login.html
+++ b/usuarios/templates/login.html
@@ -16,9 +16,8 @@
 
         </br>
         {{error}}
-        
 
-        <form action="#" method="POST"> {% csrf_token %}
+        <form accept="{% url 'login' %}" method="POST"> {% csrf_token %}
             <label for="nome-de-usuario">Nome de Usuário:</label>
             <input type="text" id="nome-de-usuario" name="nome-de-usuario" required>
 
