fixing bug on redirect in cadastro view cursos

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -25,7 +25,7 @@
                 <div class="game-card">
                     <h3>Jogo 2</h3>
                     <p>Descrição do Jogo 2</p>
-                    <a href={% url 'login' %}>Faça Login</a>
+                    <a href={% url 'entrar' %}>Faça Login</a>
                 </div>
                 <!-- Adicione mais jogos conforme necessário -->
             </div>
