--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="{% static 'usuarios/css/cadastro.css' %}" rel="stylesheet">
     <link rel="shortcut icon" type="imagex/png" href="{% static 'usuarios/img/icon.ico' %}">
 </head>
@@ -16,7 +17,15 @@
             <img src="{% static 'usuarios/img/Logo_FF.png' %}" alt="Logo">
         </div>
         <div class="titulo"><h1>Faça seu cadastro</h1></div>
-    </br> {{error}}
+        {% if messages %}
+            <br>
+            {%for message in messages %}
+                <div class="alert {{message.tags}}">
+                    {{message}}
+                </div>
+            {% endfor %}
+        {% endif %} 
+
         <form action="{% url 'cadastro' %}" method="POST"> {% csrf_token %}
             <label for="nome">Nome:</label>
             <input type="text" id="nome" name="nome" required>
