--- a/usuarios/templates/login.html
+++ b/usuarios/templates/login.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="{% static 'usuarios/css/login.css' %}" rel="stylesheet">
     <link rel="shortcut icon" type="imagex/png" href="{% static 'usuarios/img/icon.ico' %}"></head>
 <body>
@@ -13,7 +14,14 @@
             <img src="{%static 'usuarios/img/Logo_FF.png'%}" alt="Logo">
         </div>
         <div class="titulo"> <h1>Faça Login</h1> </div>
-        </br> {{error}}
+        {% if messages %}
+            <br>
+            {%for message in messages %}
+                <div class="alert {{message.tags}}">
+                    {{message}}
+                </div>
+            {% endfor %}
+        {% endif %} 
         <form action="{% url 'entrar' %}" method="POST"> {% csrf_token %}
             <label for="nome-de-usuario">Nome de Usuário:</label>
             <input type="text" id="nome-de-usuario" name="nome-de-usuario" required>
