--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <link href="{% static 'core/css/home.css' %}%}" rel="stylesheet">
     <title>Home</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
@@ -14,15 +15,15 @@
     <!-- Example Code -->
     
     <nav class="navbar col-12 m-auto position-fixed navbar-expand-lg navbar-dark bg-primary">
-      <div class="container-fluid col-11 m-auto">
-        <a class="navbar-brand" href="#">Navbar</a>
+      <div class="container-fluid col-10 m-auto">
+        <a class="navbar-brand" href="#">FORUM</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Link</a>
@@ -32,19 +33,18 @@
                 Dropdown
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href={% url 'entrar' %}>Entrar</a></li>
-                <li><a class="dropdown-item" href={% url 'cadastro' %}>Cadastre-se</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="{% url 'sair' %}">Sair</a></li>
+                <li><a class="dropdown-item" href="{% url 'entrar' %}">Entrar</a></li>
+                <li><a class="dropdown-item" href="{% url 'cadastro' %}">Cadastre-se</a></li>
+                {%if user.is_authenticated%}
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="{% url 'sair' %}">Sair</a></li>
+                {%endif%}
               </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-light" type="submit">Search</button>
+            <button class="btn btn-outline-light me-3" type="submit"><a class="dropdown-item" style="font-weight: 500;" href={% url 'entrar' %}>Entrar</a></button>
+            <button class="btn btn-light" type="submit"><a class="dropdown-item" style="color: #166BCE; font-weight: 500;" href={% url 'cadastro' %}>Criar Conta</a></button>
           </form>
         </div>
       </div>
