--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <link href="{% static 'core/css/home.css' %}%}" rel="stylesheet">
+    <link href="{% static 'core/css/home.css' %}" rel="stylesheet">
     <title>Home</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body class="p-0 m-0 border-0 bd-example m-0 border-0">
 
     <!-- Example Code -->
-    
-    <nav class="navbar col-12 m-auto position-fixed navbar-expand-lg navbar-dark bg-primary">
-      <div class="container-fluid col-10 m-auto">
-        <a class="navbar-brand" href="#">FORUM</a>
+
+    <nav class="navbar col-12 position-fixed m-auto navbar-expand-lg navbar-dark" >
+      <div class="container-fluid col-9 m-auto">
+        <a class="navbar-brand" href="{% url 'home' %}">FORUM(LOGO)</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -41,7 +41,7 @@
                 {%endif%}
               </ul>
             </li>
-          </ul>
+          </ul>  
           <form class="d-flex" role="search">
             <button class="btn btn-outline-light me-3" type="submit"><a class="dropdown-item" style="font-weight: 500;" href={% url 'entrar' %}>Entrar</a></button>
             <button class="btn btn-light" type="submit"><a class="dropdown-item" style="color: #166BCE; font-weight: 500;" href={% url 'cadastro' %}>Criar Conta</a></button>
@@ -49,6 +49,10 @@
         </div>
       </div>
     </nav>
+
+
+
+
     
     <!-- End Example Code -->
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
