--- a/templates/static/usuarios/css/cadastro.css
+++ b/templates/static/usuarios/css/cadastro.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #166BCE;
+    background-image: linear-gradient(#0d6efd, #00b3FF);
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
