--- a/templates/static/usuarios/css/login.css
+++ b/templates/static/usuarios/css/login.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #166BCE;
+    background-image: linear-gradient(#0d6efd, #00b3FF);
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
@@ -10,13 +10,13 @@ body {
 }
 
 .container {
-width: 400px;
-margin-right: auto;
-margin-left: auto;  
-background-color: white;
-padding: 30px;
-border-radius: 10px;
-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    width: 400px;
+    margin-right: auto;
+    margin-left: auto;  
+    background-color: white;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
 
 .titulo h1{
