--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -1,63 +1,78 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="pt">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <link href="{% static 'core/css/home.css' %}" rel="stylesheet">
-    <title>Home</title>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  </head>
-  <body class="p-0 m-0 border-0 bd-example m-0 border-0">
+<html lang="en">
 
-    <!-- Example Code -->
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="{% static 'core/css/home.css' %}" rel="stylesheet" >
+  
+  <title>Bootstrap</title>
+</head>
 
-    <nav class="navbar col-12 position-fixed m-auto navbar-expand-lg navbar-dark" >
-      <div class="container-fluid col-9 m-auto">
-        <a class="navbar-brand" href="{% url 'home' %}">FORUM(LOGO)</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<body>
+    <nav class="navbar navbar-expand-lg bg-custom ">
+      <div class="container-fluid col-10">
+        <a class="navbar-brand text-light" href="#">FORUM(LOGO)</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+          <ul class="navbar-nav ms-auto">
+
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+              <a class="nav-link" aria-current="page" href="{% url 'entrar' %}">ENTRAR</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" aria-current="page" href="{% url 'cadastro' %}">CADASTRE-SE</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="{% url 'entrar' %}">Entrar</a></li>
-                <li><a class="dropdown-item" href="{% url 'cadastro' %}">Cadastre-se</a></li>
-                {%if user.is_authenticated%}
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="{% url 'sair' %}">Sair</a></li>
-                {%endif%}
-              </ul>
-            </li>
-          </ul>  
-          <form class="d-flex" role="search">
-            <button class="btn btn-outline-light me-3" type="submit"><a class="dropdown-item" style="font-weight: 500;" href={% url 'entrar' %}>Entrar</a></button>
-            <button class="btn btn-light" type="submit"><a class="dropdown-item" style="color: #166BCE; font-weight: 500;" href={% url 'cadastro' %}>Criar Conta</a></button>
-          </form>
+
+          </ul>
+          <div class="button-group ms-3">
+            <button class="btn btn-light me-3 rounded-pill" type="submit">
+              <a class="dropdown-item" style="font-weight: 500;" href="#">FAÇA UMA PERGUNTA</a>
+            </button>
+          </div>
+
+
         </div>
       </div>
     </nav>
+  </header>
 
+  <main>
 
+    <div class="main">
+      <div class="container-fluid" style="height: 750px;">
+        <div class="row align-items-center justify-content-around" style="height: 750px">
+          <div class="col-3 bg-warning text-center"></div>
+          <div class="col-3 bg-warning text-center"></div>
+        </div>
+      </div>
+    </div>
 
+  </main>
 
-    
-    <!-- End Example Code -->
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+  <footer>
 
-  </body>
+    <div class="footer text-center">
+      <div class="container-fluid bg-custom" style="height: 150px;">
+        <div class="row">
+          <div class="col">Rodape</div>
+        </div>
+      </div>
+    </div>
+
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
