--- a/templates/static/core/css/home.css
+++ b/templates/static/core/css/home.css
@@ -1,17 +1,13 @@
-
-body{
-    background-image: linear-gradient(#0d6efd, #00b3FF);
-
+:root {
+    --my-custom-color: #0d6efd;
 }
 
-.navbar{
-    padding-top: 56px;
+.bg-custom {
+    background-color: var(--my-custom-color);
 }
 
-.container-lg{
+.nav-link {
+    font-size: 1rem;
     color: white;
-    font-family: Trebuchet MS, sans-serif;
 }
-.container-lg main{
-    display: block;
-}
+
